@@ -1,3 +1,6 @@
+Jan 17, 2020
+  added loading of promoter gff3 files into JBrowse
+
 Jan 08, 2020
   generation of gff3 files for all promoters in RGD
 
